# 4_course_numbers

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  build.sh
1/: algos.cpp  algos.hpp  bigNum.h  main  main.cpp  millerRabin.h  test_main.cpp
10/: algos.cpp  algos.hpp  main.cpp  test_main.cpp
2/: algos.cpp  algos.hpp  main.cpp  test_main.cpp
3/: algos.cpp  algos.hpp  main.cpp
4/: algos.cpp  algos.hpp  main.cpp
5/: algos.cpp  algos.hpp  main.cpp
6/: algos.cpp  algos.hpp  main.cpp  test_main.cpp
7/: algos.cpp  algos.hpp  main.cpp  test_main.cpp
8/: algos.cpp  algos.hpp  main.cpp  test_main.cpp
9/: algos.cpp  algos.hpp  test_main.cpp
